<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.dfiecko</groupId>
    <artifactId>instagram-analyser</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>
    <developers>
        <developer>
            <name>Daniel Fiecko</name>
            <id>dfiecko</id>
            <email>daniel.fiecko@protonmail.com</email>
        </developer>
    </developers>


    <properties>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <spring.webmvc.version>4.3.7.RELEASE</spring.webmvc.version>
        <log4j.version>1.2.17</log4j.version>
        <junit.version>4.12</junit.version>
        <mockito.version>1.9.5</mockito.version>
        <jackson.version>2.9.5</jackson.version>
        <projectlombok.version>1.16.12</projectlombok.version>
        <jsoup.version>1.8.3</jsoup.version>
        <javatuples.version>1.2</javatuples.version>
        <guava.version>19.0</guava.version>
        <commons.validator.version>1.6</commons.validator.version>
        <elasticsearch.version>5.6.5</elasticsearch.version>
        <webjars.bootstrap.version>3.3.7</webjars.bootstrap.version>
        <javax.servlet.jslt.version>1.2.1</javax.servlet.jslt.version>
        <tagslib.standard.version>1.1.2</tagslib.standard.version>
        <javax.servlet.version>3.1.0</javax.servlet.version>
        <javax.servlet.jsp.version>2.3.1</javax.servlet.jsp.version>
        <maven.version>3.5.1</maven.version>
        <tomact.version>2.2</tomact.version>
        <docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- Spring MVC Dependency -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.webmvc.version}</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${projectlombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>${javatuples.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons.validator.version}</version>
        </dependency>

        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>5.6.5</version>
        </dependency>


        <!-- Optional, test for static content, bootstrap CSS-->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>${webjars.bootstrap.version}</version>
        </dependency>

        <!-- JSTL Dependency -->
        <dependency>
            <groupId>javax.servlet.jsp.jstl</groupId>
            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
            <version>${javax.servlet.jslt.version}</version>
        </dependency>
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>${tagslib.standard.version}</version>
        </dependency>

        <!-- Servlet Dependency -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${javax.servlet.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- JSP Dependency -->
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>${javax.servlet.jsp.version}</version>
            <scope>provided</scope>
        </dependency>


    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- Embedded Apache Tomcat required for testing war -->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>${tomact.version}</version>
                <configuration>
                    <path>/</path>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>${docker-maven-plugin.version}</version>
                <configuration>
                    <imageName>${project.build.finalName}</imageName>
                    <dockerCertPath></dockerCertPath>
                    <baseImage></baseImage>
                    <entryPoint>["java", \
                        "-Xmx500m", \
                        "-Dcom.sun.management.jmxremote", \
                        "-Dcom.sun.management.jmxremote.port=9999", \
                        "-Dcom.sun.management.jmxremote.authenticate=false", \
                        "-Dcom.sun.management.jmxremote.ssl=false", \
                        "-XX:+UseG1GC", \
                        "-XX:+PrintGC", \
                        "-XX:+PrintGCDetails", \
                        "-XX:+PrintGCTimeStamps", \q
                        "-XX:+PrintTenuringDistribution", \
                        "-XX:+UnlockDiagnosticVMOptions", \
                        "-jar", \
                        "/${project.build.finalName}.jar"]
                    </entryPoint>
                    <resources>
                        <resource>
                            <targetPath>/</targetPath>
                            <directory>${project.build.directory}</directory>
                            <include>${project.build.finalName}.jar</include>
                        </resource>
                    </resources>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>